--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <body>
     <h1>helloooo</h1>
     <p>Welcome to new p</p>
-    <div class="container"></div>
+    <div class="container">
+        <div class="row"></div>
+        
+    </div>
 </body>
 </html>
